feat: release SDK v1.2.0 — World API sync, Python async, open-source docs
Co-authored-by: Cursor <cursoragent@cursor.com>